Zurb foundation orbit feature and home page modifications

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,6 +1,6 @@
 [production]
 phpSettings.display_startup_errors = 0
-phpSettings.display_errors = 0
+phpSettings.display_errors = 1
 includePaths.library = APPLICATION_PATH "/../library"
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
@@ -14,8 +14,8 @@ resources.db.params.host = "localhost"
 resources.db.params.username = "root"
 resources.db.params.password = ""
 resources.db.params.dbname = "zfdb"
-resources.router.routes.route_id.defaults.controller = "Auth"
-resources.router.routes.route_id.defaults.action = "login"
+resources.router.routes.route_id.defaults.controller = "index"
+resources.router.routes.route_id.defaults.action = "home"
 ldap.server.host = ldap://localhost
 ldap.server.baseDn = "ou=people,dc=example,dc=com"
 ldap.server.bindRequiresDn = true
